@@ -1,3 +1,8 @@
+2002-01-31  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02949] fix for #undef USE_MIGEMO
+	* main.c (dispincsrch): need #ifdef USE_MIGEMO
+
 2002-01-31  Fumitoshi UKAI <ukai@debian.or.jp>
 
 	* [w3m-dev 02946] toggle migemo
@@ -2457,4 +2462,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.280 2002/01/31 03:55:35 ukai Exp $
+$Id: ChangeLog,v 1.281 2002/01/31 04:49:42 ukai Exp $
